all-in-one-fleet.yaml
#A namespace for all the elastic components
apiVersion: v1
kind: Namespace
metadata:
  name: devoops

---
#Ingress for Kibana
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kbdev-kb-http-ingress
  namespace: devoops
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: kibana-quickstart-kb-http
                port:
                  number: 5601
            path: /
            pathType: Prefix
