all-in-one.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devoops

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kbdev-kb-http-ingress
  namespace: devoops
spec:
  ingressClassName: nginx   
  rules:
    - http:
        paths:
          - backend:
              service:
                name: kbdev-kb-http
                port:
                  number: 5601
            path: /kibana
            pathType: Prefix
